--- a/src/LuaBundle.properties
+++ b/src/LuaBundle.properties
@@ -54,5 +54,7 @@ newfile.dialog.title=Create Lua script
 newfile.command.name=Lua script
 newfile.dialog.prompt=Create a new Lua script
 file.template.group.title.bash=Lua Script File Templates
+color.settings.globals=Global Variables
+color.settings.locals=Local Variables
 
 
