--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -26,6 +26,7 @@
 
         <p>Features:</p>
         <ol>
+            <li>Hilighing global vs local variables</li>            
             <li>Script execution and run configurations</li>
             <li>Kahlua interpreter window for interactive script execution (repl)</li>
             <li>Comes with an embedded Lua compiler written in Java (Kahlua)</li>
@@ -44,6 +45,8 @@
         <html>
         <body>
         <dl>
+            <dt>0.7</dt>
+            <dd>Using internal parser, instead of external annotator.</dd>
             <dt>0.6.3 - 0.6.4</dt>
             <dd>Improve annotation when using Kahlua - now it annotates semi-instantly</dd>
             <dt>0.6.2</dt>
@@ -81,7 +84,7 @@
         </body>
         </html>
         ]]></change-notes>
-    <version>0.6.4</version>
+    <version>0.7.0</version>
     <vendor url="https://www.ohloh.net/accounts/sylvanaar" email="sylvanaar@mindspring.com">sylvanaar</vendor>
     <category>Custom Languages</category>
     <idea-version since-build="8000"/>
