--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -160,6 +160,8 @@
 
         <colorSettingsPage implementation="com.sylvanaar.idea.Lua.editor.hilighter.LuaColorsPage"/>
 
+        <quoteHandler fileType="Lua" className="com.sylvanaar.idea.Lua.editor.hilighter.LuaQuoteHandler" />
+        
         <!-- Annotator extensions -->
         <annotator language="Lua" implementationClass="com.sylvanaar.idea.Lua.editor.annotator.LuaAnnotator" />
 
@@ -178,7 +180,7 @@
 
         <!-- Lang extensions -->
 
-        <!--<lang.formatter language="Lua" implementationClass="com.sylvanaar.idea.Lua.lang.formatter.LuaFormattingModelBuilder"/>-->
+        <lang.formatter language="Lua" implementationClass="com.sylvanaar.idea.Lua.lang.formatter.LuaFormattingModelBuilder"/>
 
         <lang.braceMatcher language="Lua"
                            implementationClass="com.sylvanaar.idea.Lua.lang.LuaBraceMatcher"/>
@@ -190,6 +192,7 @@
         <lang.commenter language="Lua" implementationClass="com.sylvanaar.idea.Lua.lang.LuaCommenter"/>
 
         <lang.foldingBuilder language="Lua" implementationClass="com.sylvanaar.idea.Lua.lang.LuaFoldingBuilder"/>
+
 
 
         <lang.documentationProvider language="Lua" implementationClass="com.sylvanaar.idea.Lua.lang.documentor.LuaDocumentationProvider" />
